# get-ai-dvc-deploy

./: Makefile  README.MD  RELEASE.md  dvc.yaml  metrics.yaml  settings.yaml
.dvc/: config
data/: mlflow.db
data/mlflow_artifacts/get-eclipse-supply-elec/13b406c9a4e14b0ab6b891b52a52e2fc/artifacts/model/: MLmodel  (+2 more)
get-forecaster/: .gitignore  Makefile  README.md  setup.cfg  setup.py
get-forecaster/docker/: Dockerfile
get-forecaster/notebook/: test_features.ipynb  test_forecaster.ipynb  test_hybrid.ipynb  test_lstm.ipynb  test_pipeline_pgas.ipynb  test_pipeline_scm.ipynb  test_sarimax.ipynb
get-forecaster/results/bayesian/: bayesian_results.csv  bayesian_time.csv  hybrid_results.csv  lgb_results.csv  linear_results.csv  prophet_results.csv  time.csv
get-forecaster/results/bayesian/archive/: all_time.csv  lgb_time.csv  linear_time.csv  prophet_time.csv
get-forecaster/results/randomized_search/: lgb_results.csv  linear_results.csv  prophet_results.csv  time.csv
get-forecaster/src/forecaster/: __init__.py
get-forecaster/src/forecaster/models/: hybrid_model.py  lgb_model.py  lstm_model.py
get-forecaster/src/forecaster/utils/: model_selection.py
get-forecaster/tests/: test_forecaster.py
src/: data.dvc  drift_detect.py  metrics.yaml  predict.py  train.py
src/data/: production.csv  reference.csv  sample.csv
src/pb/: spug_kafka_format.proto  spug_kafka_format.py
src/scripts/: run_mlflow.sh
src/secret/: sas_dev.json
src/tests/: test_kafka.py
src/tools/: check_kafka_sink.py
src/utils/: azure_blob.py  kafka_sink.py  logger.py  octopus_loader.py
(+14 files in other folders)
