[metadata]
name = get-forecaster
version = 0.1.1
author = 
author_email = 
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://code.in.spdigital.sg/SP-Data-Cloud/get-forecaster
project_urls =
    Bug Tracker = https://code.in.spdigital.sg/SP-Data-Cloud/get-forecaster/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

